# csv-sniffer

./: Cargo.toml  README.md
examples/: worldbank.rs
src/: chain.rs  lib.rs  metadata.rs  sniffer.rs
tests/: delimiter.rs
