[package]
name = "qsv-sniffer"
description = "A CSV file format sniffer for Rust (fork of csv-sniffer)"
version = "0.2.1"
authors = ["Joel Natividad <joel@datHere.com>"]
license-file = "LICENSE"
repository = "https://github.com/jqnatividad/csv-sniffer"
exclude = ["tests/data/*"]

[dependencies]
csv-core = "0.1"
csv = "1"
regex = "1.5"
bitflags = "1"
memchr = "2"
